--- a/ximeraUserManual/seeXimeraInAction/seeXimeraInAction.tex
+++ b/ximeraUserManual/seeXimeraInAction/seeXimeraInAction.tex
@@ -10,6 +10,20 @@ Examples of documents in Ximera.
 \end{abstract}
 \maketitle
 
-
-
+Here we list of selected Ximera activities. To see the code in any of the cases below, simply append \verb!.tex! to the URL. Enjoy!
+\begin{itemize}
+\item \link[\textit{Precalculus Algebra}]{https://go.osu.edu/prca} 
+\item \link[\textit{ComprehensiveFactoring   Practice   Quiz}]{https://go.osu.edu/cfa}
+\item \link[\textit{Precalculus with Review: Part I}]{https://go.osu.edu/pcr}        
+\item \link[\textit{Precalculus with Review: Part II}]{https://go.osu.edu/pcr2}        
+\item \link[\textit{Business Calculus}]{https://go.osu.edu/bca}
+\item \link[\textit{Calculus 1}]{https://go.osu.edu/mc1}
+\item \link[\textit{Calculus 2}]{https://go.osu.edu/mc2}
+\item \link[\textit{Calculus 3}]{https://go.osu.edu/mc3}
+\item \link[\textit{Linear  Algebra: An Interactive Introduction}]{https://go.osu.edu/ila} 
+\item \link[\textit{Systems: Number of Solutions (with Parameter)}]{https://go.osu.edu/mepr} 
+\item \link[\textit{Math for Elementary Teachers:	 Part I}]{https://go.osu.edu/met1} 
+\item \link[\textit{Math for Elementary Teachers: Part II}]{https://go.osu.edu/met2}
+\item \link[\textit{Quality Control for Introductory Statistics and Manufacturing Courses}]{https://go.osu.edu/qcst} 
+\end{itemize}
 \end{document}
