--- a/ximeraUserManual/progressAndCredit/progressAndCredit.tex
+++ b/ximeraUserManual/progressAndCredit/progressAndCredit.tex
@@ -15,7 +15,7 @@ reports a number between $0$ and $1$ with $1$ representing ``complete.''
 \section{Progress within a Ximera file}
 
 The total progress of a given Ximera file is broken up evenly with top level
-environment.
+environment and any YouTube videos, which \textit{could} be in environments. 
 For example, let's say you have the following Ximera document:
 
 \begin{verbatim}
@@ -63,31 +63,37 @@ Compute $1+2$.
 1+2=\answer{3}
 \]
 \end{problem}
+
+\begin{center}
+    \youtube{FvgF95i0_lw}
+\end{center}
+
 \end{document}
 \end{verbatim}
 
 Above there are four top level theorem environments above: A \verb!theorem!,
-\verb!question!, \verb!remark!, and \verb!problem!. Each of these is worth
-$25\%$ of the total credit.  The breakdown of points is described below:
+\verb!question!, \verb!remark!, and \verb!problem!; and a YouTube video.  Each of these is worth
+$20\%$ of the total credit.  The breakdown of points is described below:
 
 \begin{description}
-    \item[Theorem environment] Worth 25\% contingent on completion.
+    \item[Theorem environment] Worth 20\% contingent on completion.
         \begin{description}
             \item[No answerables] Automatically flagged as complete.
         \end{description}
-    \item[Question environment] Worth 25\% contingent on completion.
+    \item[Question environment] Worth 20\% contingent on completion.
         \begin{description}
             \item[selectAll] Sub-environment worth 50\% of the enclosing
                 environment contingent on completion.
             \item[Problem environment] Sub-environment Worth 50\% of the
                 enclosing environment contingent on completion.
         \end{description}
-    \item[Remark environment] Worth 25\% contingent on
+    \item[Remark environment] Worth 20\% contingent on
         completion.
         \begin{description}
             \item[No answerables] Automatically flagged as complete.
         \end{description}
-    \item[Problem environment] Worth 25\% contingent on completion.
+    \item[Problem environment] Worth 20\% contingent on completion.
+    \item[YouTube video] Worth 20\% contingent on \textit{complete} viewing.
 \end{description}
 
 In table form:
@@ -95,31 +101,33 @@ In table form:
     \begin{array}{lcc}
         \text{Environment} & \text{Problem Level Credit} & \text{Total Credit}
         \\\hline
-        \text{Theorem}     &                             & 25\%                \\
-        \text{Question}    &                             & 25\%                \\
-        \text{selectAll}   & 50\%                        & 12.5\%              \\
-        \text{Sub-Problem} & 50\%                        & 12.5\%              \\
-        \text{Remark}      &                             & 25\%                \\
-        \text{Problem}     &                             & 25\%                \\
-        \text{answerBox}   & 100\%                       & 25\%
+        \text{Theorem}     &       & 20\%\\
+        \text{Question}    &       &   \%\\
+        \text{selectAll}   & 50\%  & 10\%\\
+        \text{Sub-Problem} & 50\%  & 10\%\\
+        \text{Remark}      &       & 20\%\\
+        \text{Problem}     &       &     \\         
+        \text{answerBox}   & 100\% & 20\%\\
+        \text{YouTube}     &       & 20\%   
     \end{array}
 \]
-So, there are three things to notice here.
+There are things to notice here.
 
 \begin{enumerate}
     \item Environments that don't have answerables automatically
           give credit as soon as the page is loaded. This also means that a
           large portion of the tile's credit could (theoretically) be given just for loading the page,
           without doing anything. Getting some credit for loading the page doesn't seem to result in less effort spent on the page.
-    \item Only environments give credit. All answerables \textbf{must} be in an environment.
+    \item Only environments and YouTube give credit. All answerables \textbf{must} be in an environment.
     \item Since credit is split evenly
           \textbf{at the top-level environment count only}, problems with lots
           of parts, nested or not, can end up with nested problems that are worth
           significantly less compared to a problem that has no nested problems. 
+    \item YouTube videos do not need to be in theorem-like environments and one must watch them in entirety to receive full credit.
 \end{enumerate}
 
 \section{Progress within a \texttt{xourse}}
 
-Credit for a \verb!xourse! is split evenly between all Ximera activites listed in the \verb!xourse!.
+Credit for a \verb!xourse! is split evenly between all Ximera activities listed in the \verb!xourse!.
 
 \end{document}
