--- a/ximeraUserManual/printing/printing.tex
+++ b/ximeraUserManual/printing/printing.tex
@@ -19,15 +19,15 @@ effects are only seen in the PDF:
  
 %% Copied from dtx
 \begin{description}
-\item[handout] The default behavior of the class is to display \textbf{all} content. This means that if any questions are asked, all answers are shown. Moreover, some content will only have a meaningful presentation when displayed online. When compiled without any options, this content will be shown too. This option will supress such content and generate a reasonable printiable ``handout.''
-\item[noauthor] By default, authors are listed at the bottom of the first page of a document. This option will supress the listing of the authors.
-\item[nooutcomes] By default, learning outcomes are listed at the bottom of the first page of a document. This option will supress the listing of the learning outcomes.
-\item[instructornotes] This option will turn on (and off) notes written for the instructor.
-\item[noinstructornotes] This option will turn off (and on) notes written for the instructor.
-\item[hints] When the \texttt{handout} options is used, hints are not shown. This option will make hints visible in handout mode.
-\item[newpage] This option will start each problem-like environment (\texttt{exercise}, \texttt{question}, \texttt{problem}, and \texttt{exploration}) start on a new page.
-\item[numbers] This option will number the titles of the activity. By default the activities are unnumbered.
-\item[wordchoicegiven] This option will replace the choices shown by \texttt{wordChoice} with the correct choice. No indication of the \texttt{wordChoice} environment will be shown.
+\item[\tt\bfseries handout] The default behavior of the class is to display \textbf{all} content. This means that if any questions are asked, all answers are shown. Moreover, some content will only have a meaningful presentation when displayed online. When compiled without any options, this content will be shown too. This option will supress such content and generate a reasonable printiable ``handout.''
+\item[\tt\bfseries noauthor] By default, authors are listed at the bottom of the first page of a document. This option will supress the listing of the authors.
+\item[\tt\bfseries nooutcomes] By default, learning outcomes are listed at the bottom of the first page of a document. This option will supress the listing of the learning outcomes.
+\item[\tt\bfseries instructornotes] This option will turn on (and off) notes written for the instructor.
+\item[\tt\bfseries noinstructornotes] This option will turn off (and on) notes written for the instructor.
+\item[\tt\bfseries hints] When the \texttt{handout} options is used, hints are not shown. This option will make hints visible in handout mode.
+\item[\tt\bfseries newpage] This option will start each problem-like environment (\texttt{exercise}, \texttt{question}, \texttt{problem}, and \texttt{exploration}) start on a new page.
+\item[\tt\bfseries numbers] This option will number the titles of the activity. By default the activities are unnumbered.
+\item[\tt\bfseries wordchoicegiven] This option will replace the choices shown by \texttt{wordChoice} with the correct choice. No indication of the \texttt{wordChoice} environment will be shown.
 \end{description}
 
 
