--- a/ximeraUserManual/progressAndCredit/progressAndCredit.tex
+++ b/ximeraUserManual/progressAndCredit/progressAndCredit.tex
@@ -10,7 +10,7 @@
 \maketitle
 
 For each distinct URL assigned, including an entire \verb!xourse! file, Ximera
-reports a number between $0$ and $1$ with $1$ representing ``complete.''
+reports a number between $0$ and $1$, with $1$ representing ``complete.''
 
 \section{Progress within a Ximera file}
 
