--- a/ximeraUserManual/rendering/rendering.tex
+++ b/ximeraUserManual/rendering/rendering.tex
@@ -11,7 +11,7 @@
 
 Rendering in Ximera can be broken down into three parts:
 \begin{description}
-    \item[Rendering text] is handled using the \LaTeX package TeX4ht.
+    \item[Rendering text] is handled using the \LaTeX\ package TeX4ht.
     \item[Rendering math] is handled using MathJax via TeX4ht.
     \item[Rendering images] is done by directly showing the image (in the case
         of a PNG or JPG) or converting to SVG and displaying the SVG.
@@ -26,7 +26,7 @@ some very technical details here). This can make it difficult to horizontally
 align things with any subtlety.
 
 
-unknown node type: parser error message. This appears
+\paragraph{unknown node type: parser error} message. This appears
           sometimes rather than the actual rendered mathematics. This is due to a
           corruption in the cookies/cache for the browser, and the person seeing this
           error need to clear their cache and then reload the page to resolve the
@@ -34,7 +34,7 @@ unknown node type: parser error message. This appears
 
 
 
-
+\paragraph{svg-viewer missing} error message
 
 
 
