--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -88,21 +88,23 @@ The preferred way to include graphics is with TikZ.
 
 \begin{verbatim}
 \begin{image}
-  \begin{tikzpicture}
-    \begin{axis}[
-        xmin=-6.4,
-        xmax=6.4,
-        ymin=-1.2,
-        ymax=1.2,
-        axis lines=center,
-        xlabel=$x$,
-        ylabel=$y$,
-        every axis y label/.style={at=(current axis.above origin),anchor=south},
-        every axis x label/.style={at=(current axis.right of origin),anchor=west},
-      ]
-      \addplot [ultra thick, blue, smooth] {sin(deg(x))};
-    \end{axis}
-  \end{tikzpicture}
+\begin{tikzpicture}
+  \begin{axis}[
+  xmin=-6.4,
+  xmax=6.4,
+  ymin=-1.2,
+  ymax=1.2,
+  axis lines=center,
+  xlabel=$x$,
+  ylabel=$y$,
+  every axis y label/.style=
+    {at=(current axis.above origin),anchor=south},
+  every axis x label/.style=
+    {at=(current axis.right of origin),anchor=west},
+  ]
+\addplot [ultra thick, blue, smooth] {sin(deg(x))};
+\end{axis}
+\end{tikzpicture}
 \end{image}
 \end{verbatim}
 
@@ -136,10 +138,6 @@ There are a number of options for the \verb|\graph| command:
 \paragraph{Restricting domain}
 \[
   \graph{x^2 \left\{ 1 \leq x \leq 10 \right\} }
-\]
-\paragraph{Restricting domain}
-\[
-  \graph{x^2 {1 \leq x \leq 10} }
 \]
 \paragraph{Graphing a piecewise function}
 
