--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -710,4 +710,18 @@ detail.
   }
   \end{verbatim}
 
+Use a global grpahics path
+  \begin{verbatim}
+    %% where to find images
+    \graphicspath{
+    {./}
+    {./graphics/}
+    {.././graphics/}    
+    }
+    \end{verbatim}
+
+See page 10 and page 24  
+
+
+
 \end{document}
