--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -22,13 +22,16 @@
 \maketitle
 \pdfOnly{\pagestyle{fancy}}
 \twocolumn
+\part{Introduction}
 \frontstyle
 \activity{introduction/introduction}
+\part{Basics}
 \chapterstyle
 \activity{setup/setup}
 \activity{workflow/workflow}
 \activity{commonUseCases/commonUseCases}
 \activity{graphicsVideosAndInteractives/graphicsVideosAndInteractives}
+\part{More information}
 \activity{rendering/rendering}
 \activity{progressAndCredit/progressAndCredit}
 \activity{printing/printing}
