--- a/basics/graphicsInteractives.tex
+++ b/basics/graphicsInteractives.tex
@@ -1,4 +1,5 @@
 \documentclass{ximera}
+\input{../preamble}
 \title{Graphics, videos, and interactives}
 \author{Bart Snapp and Jason Nowell}
 \begin{document}
