--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
-%% Where to find images
 \graphicspath{  %% When looking for images,
-{./}            %% look first at your level,
-{./basics/}     %% then in this folder,
-}    
+{./}            %% look here first,
+{./pictures/}   %% the look for a graphics folder,
+{../pictures/}  %% which may be a directory up.
+}
