--- a/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
+++ b/ximeraUserManual/graphicsVideosAndInteractives/graphicsVideosAndInteractives.tex
@@ -46,7 +46,7 @@ the paths to the images in some way. You can do this by:
   \item[Editing the graphics path]
   \item[Using a global graphics folder] can be done as follows by adding
 \begin{verbatim}
-\graphicspath{  %% When looking for inages,
+\graphicspath{  %% When looking for images,
 {./}            %% look here first,
 {./graphics/}   %% the look for a graphics folder,
 {../graphics/}  %% which may be a directory up.
