--- a/preamble.tex
+++ b/preamble.tex
@@ -1,5 +1,5 @@
 \graphicspath{  %% When looking for images,
 {./}            %% look here first,
-{./pictures/}   %% the look for a graphics folder,
+{./pictures/}   %% then look for a pictures folder,
 {../pictures/}  %% which may be a directory up.
 }
