--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -55,22 +55,22 @@ You can see the source code for this file by appending \verb|.tex| to the end of
 
 Here's something fun
 
-\begin{paradox}[$0=1$] Let $x=y$ and write
-\begin{align}
-    x^2 & = xy \\
-    x^2 - y^2 &= xy - y^2\\
-    (x-y)(x+y) &= (x-y)y\\
-    (x+y) &= y\\
-    2y &= y\\
-    2=1.
-\end{align}
-Where is the mistake in the work above?
-\begin{prompt} %% The content within prompt is not necessary in a PDF or physical handout
-\[
-\text{Between line }\answer{3} \text{ and line }\answer{4}.
-\]
-\end{prompt}
-\end{paradox}
+% \begin{paradox}[$0=1$] Let $x=y$ and write
+% \begin{align}
+%     x^2 & = xy \\
+%     x^2 - y^2 &= xy - y^2\\
+%     (x-y)(x+y) &= (x-y)y\\
+%     (x+y) &= y\\
+%     2y &= y\\
+%     2=1.
+% \end{align}
+% Where is the mistake in the work above?
+% \begin{prompt} %% The content within prompt is not necessary in a PDF or physical handout
+% \[
+% \text{Between line }\answer{3} \text{ and line }\answer{4}.
+% \]
+% \end{prompt}
+% \end{paradox}
 
 
 \section{Basic exercises}
