add \part (needed for local server!)

--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -8,8 +8,11 @@
     to be deployed online.
 \end{abstract}
 \maketitle
+\part{Basic example}
 \activity{basics/basicWorksheet}
 \activity{basics/graphicsInteractives}
+
+\part{List(s) of exercises}
 \practice{exercises/answer}
 \practice{exercises/multipleChoice}
 \practice{exercises/selectAll}
