add exercises (with title!)

--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -4,12 +4,18 @@
 \title{A First Step in Ximera}
 \begin{document}
 \begin{abstract}
-    A simple collection of Ximera activities, 
+    A very simple collection of Ximera activities, 
     to be deployed online.
 \end{abstract}
 \maketitle
 \part{Basic example}
-\activity{basics/basicWorksheet}
-\activity{basics/graphicsInteractives}
+
+\chapterstyle
+    \activity{basics/basicWorksheet}
+    \sectionstyle
+    \activity{basics/exercises/someExercises}
+
+    \chapterstyle
+    \activity{basics/graphicsInteractives}
 
 \end{document}
