--- a/basics/exercises/someExercises.tex
+++ b/basics/exercises/someExercises.tex
@@ -1,4 +1,5 @@
 \documentclass{ximera}
+\input{../../preamble.tex}
 \begin{document}
     \title{And now for some exercises}
     \begin{abstract} Let's practice \end{abstract}
