add same xourse with 'new layout'

--- a/preamble.tex
+++ b/preamble.tex
@@ -3,3 +3,7 @@
 {./pictures/}   %% then look for a pictures folder,
 {../pictures/}  %% which may be a directory up.
 }
+
+% For use with xake > v2.1.3
+\hintAsExpandablefalse
+\expandableAsAccordionfalse
