--- a/variant/aNewlayout.tex
+++ b/variant/aNewlayout.tex
@@ -1,17 +1,17 @@
 \documentclass{xourse}
-\input{preamble} %% Loads the graphics path
-\addPrintStyle{.} %% Loads the graphics path
+\input{preamble} 
+\addPrintStyle{.} %% sets the 'printstyle'
+
 \author{Wim Obbels \and Bart Snapp}
 \title{A First Step in Ximera (New Layout)}
 \begin{document}
 \begin{abstract}
-    A very simple collection of Ximera activities, 
-    to be deployed online.
+    The same course as aFirstStepInXimera, but with a different layout.
 \end{abstract}
 \maketitle
 \part{Basic example}
 
-\chapterstyle
+    \chapterstyle
     \activity{basics/basicWorksheet}
     \sectionstyle
     \activity{basics/exercises/someExercises}
