--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -1,3 +1,4 @@
+%\providecommand{\xmDefaultPreamble}{preamble.tex}
 \documentclass{ximera}
 \author{Wim Obbels \and Bart Snapp}
 \input{../preamble}
@@ -19,7 +20,7 @@ Ximera comes pre-equipped with many environments.  If you are ever curious about
 the source code, you can visit this source at
 
 \begin{center}
-    \url{https://github.com/ximeraProject/ximeraFirstSteps/basics/basicAnswerTypes.tex}
+    \url{https://github.com/ximeraProject/ximeraFirstSteps/basics/basicWorksheet.tex}
 \end{center}
 or by appending \verb|.tex| to the URl of this page online. 
 
@@ -99,14 +100,14 @@ Maybe you want a problem with one or more parts,
         \choice{Solving a puzzle blindfolded}
     \end{multipleChoice}
     \begin{exercise}
-    Why is Ximera the best thing since the chalkboard?
-    \begin{selectAll}
-        \choice[correct]{It turns LaTeX into online materials}
-        \choice[correct]{It boosts student engagement}
-        \choice{It makes coffee and hugs you}
-        \choice[correct]{Its open-source and free}
-    \end{selectAll}
-\end{exercise}
+        Why is Ximera the best thing since the chalkboard?
+        \begin{selectAll}
+            \choice[correct]{It turns LaTeX into online materials}
+            \choice[correct]{It boosts student engagement}
+            \choice{It makes coffee and hugs you}
+            \choice[correct]{Its open-source and free}
+        \end{selectAll}
+    \end{exercise}
 \end{exercise}
 
 Finally we can include pictures using \verb|includegraphics|. Here's an example of a question with a picture.
