--- a/preamble.tex
+++ b/preamble.tex
@@ -1,3 +1,5 @@
+\typeout{Start loading main preamble.tex}%
+
 \graphicspath{  %% When looking for images,
 {./}            %% look here first,
 {./pictures/}   %% then look for a pictures folder,
