remove link-to-file (does not work)

--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -20,7 +20,7 @@ Ximera comes pre-equipped with many environments.  If you are ever curious about
 the source code, you can visit this source at
 
 \begin{center}
-    \url{https://github.com/ximeraProject/ximeraFirstSteps/basics/basicWorksheet.tex}
+    \url{https://github.com/ximeraProject/ximeraFirstSteps}
 \end{center}
 or by appending \verb|.tex| to the URl of this page online. 
 
