--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -20,7 +20,7 @@ Ximera comes pre-equipped with many environments.  If you are ever curious about
 the source code, you can visit this source at
 
 \begin{center}
-    \url{https://github.com/ximeraProject/ximeraFirstSteps/basics/basicWorksheet.tex}
+    \url{https://github.com/ximeraProject/ximeraFirstSteps}
 \end{center}
 or by appending \verb|.tex| to the URl of this page online. 
 
@@ -59,15 +59,15 @@ Here's something fun
 
 \begin{paradox}[$0=1$] Let $x=y$ and write
 \begin{align}
-    x^2 & = xy \\
-    x^2 - y^2 &= xy - y^2\\
-    (x-y)(x+y) &= (x-y)y\\
-    (x+y) &= y\\
-    2y &= y\\
-    2=1.
+        x^2    & = xy       \\
+    x^2 - y^2  & = xy - y^2 \\
+    (x-y)(x+y) & = (x-y)y   \\
+       (x+y)   & = y        \\
+         2y    & = y        \\
+          2    & =1.
 \end{align}
 Where is the mistake in the work above?
-\begin{prompt} %% The content within prompt is not necessary in a PDF or physical handout
+\begin{prompt} %% The content within prompt is normally not shown in a PDF or physical handout, as not relevant.
 \[
 \text{Between line }\answer{3} \text{ and line }\answer{4}.
 \]
