--- a/preamble.tex
+++ b/preamble.tex
@@ -1,11 +1,11 @@
 \typeout{Start loading main preamble.tex}%
 
-\graphicspath{  %% When looking for images,
-{./}            %% look here first,
-{./pictures/}   %% then look for a pictures folder,
-{../pictures/}  %% which may be a directory up.
-}
+% \graphicspath{  %% When looking for images,
+% {./}            %% look here first,
+% {./pictures/}   %% then look for a pictures folder,
+% {../pictures/}  %% which may be a directory up.
+% }
 
 % For use with xake > v2.1.3
-\hintAsExpandablefalse
-\expandableAsAccordionfalse
+% \hintAsExpandablefalse
+% \expandableAsAccordionfalse
