Update for medium_c (new ximeraLatex/xmlatex with  xmPreamble/xmPictures/.xmKeyFile)

--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -1,16 +1,19 @@
 \documentclass{xourse}
-\input{preamble} %% Loads the graphics path
+%    \input{preamble} %% No longer needed with ximeraLatex versions >= 2024-11-07
+
 \author{Wim Obbels \and Bart Snapp}
 \title{A First Step in Ximera}
+
 \begin{document}
 \begin{abstract}
     A very simple collection of Ximera activities, 
     to be deployed online.
 \end{abstract}
 \maketitle
+
 \part{Basic example}
 
-\chapterstyle
+    \chapterstyle
     \activity{basics/basicWorksheet}
     \sectionstyle
     \activity{basics/exercises/someExercises}
