--- a/aNewlayout.tex
+++ b/aNewlayout.tex
@@ -1,7 +1,7 @@
 \documentclass{xourse}
 
 \author{Wim Obbels \and Bart Snapp}
-\title{A First Step in Ximera (Variant Layout)}
+\title{A First Step in Ximera (Variant Layout, only on new ximeraServer)}
 \begin{document}
 \begin{abstract}
     The same course as aFirstStepInXimera, but with a different layout.
