--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -1,8 +1,13 @@
 %\providecommand{\xmDefaultPreamble}{preamble.tex}
 \documentclass{ximera}
 \author{Wim Obbels \and Bart Snapp}
-\input{../preamble}
-\license{CC: 0}
+
+% \input{../preamble}
+%% Note: since ximeraLatex >= 2024-11-07, file xmPreamble.tex is included AUTOMATICALLY if present
+%% explicit use of \input{preamble} is in most cases no longer needed
+
+
+\license{CC: 0}         % replace with an appropriate license, or set it in xmPreamble
 
 \title{A basic worksheet}
 
