restructure demos: rename files and folders

--- a/aFirstXourse.tex
+++ b/aFirstXourse.tex
@@ -2,7 +2,7 @@
 %    \input{preamble} %% No longer needed with ximeraLatex versions >= 2024-11-07
 
 \author{Wim Obbels \and Bart Snapp}
-\title{A First Step in Ximera}
+\title{A First Ximera Xourse}
 
 \begin{document}
 \begin{abstract}
@@ -11,14 +11,14 @@
 \end{abstract}
 \maketitle
 
-\part{Basic example}
+\part{The First Topic of This Course}
 
     \chapterstyle
-    \activity{basics/basicWorksheet}
+    \activity{aFirstFolder/aFirstActivity}
     \sectionstyle
-    \activity{basics/exercises/someExercises}
+    \activity{aFirstFolder/exercises/someExercises}
 
     \chapterstyle
-    \activity{basics/graphicsInteractives}
+    \activity{aFirstFolder/aGraphicsActivity}
 
 \end{document}
