update/fix xourses

--- a/aFirstXourseVariant.tex
+++ b/aFirstXourseVariant.tex
@@ -1,20 +1,20 @@
 \documentclass{xourse}
 
 \author{Wim Obbels \and Bart Snapp}
-\title{A First Step in Ximera (Variant Layout, only on new ximeraServer)}
+\title{A First Ximera Xourse (Variant Layout, only on new ximeraServer)}
 \begin{document}
 \begin{abstract}
-    The same course as aFirstStepInXimera, but with a different layout.
+    The same course as aFirstXourse, but with a different layout due to presence of a specific .css file.
 \end{abstract}
 \maketitle
-\part{Basic example}
+\part{The First Topic of This Course}
 
-    \chapterstyle
-    \activity{basics/basicWorksheet}
-    \sectionstyle
-    \activity{basics/exercises/someExercises}
+\chapterstyle
+\activity{aFirstFolder/aFirstActivity}
+\sectionstyle
+\activity{aFirstFolder/exercises/someExercises}
 
-    \chapterstyle
-    \activity{basics/graphicsInteractives}
+\chapterstyle
+\activity{aFirstFolder/aGraphicsActivity}
 
 \end{document}
