--- a/aListOfExercisesXourse.tex
+++ b/aListOfExercisesXourse.tex
@@ -2,22 +2,24 @@
 \input{preamble} %% Loads the graphics path
 
 \author{Wim Obbels \and Bart Snapp}
-\title{Another Step in Ximera (with exercise lists)}
+\title{A List Of Exercises (works only on OSU server)}
 \begin{document}
 \begin{abstract}
-    A collection of Ximera activities with exerciselists
+    Activities and list of exercises (called 'practices',  ie activities without title)
 \end{abstract}
 \maketitle
 
-\part{Basic example}
-\activity{basics/basicWorksheet}
-\activity{basics/graphicsInteractives}
+\part{First topiC}
+\chapterstyle
+\activity{aFirstFolder/aFirstActivity}
+\activity{aFirstFolder/aGraphicsActivity}
 
-\part{List(s) of exercises}
-\practice{exercises/answer}
-\practice{exercises/multipleChoice}
-\practice{exercises/selectAll}
-\practice{exercises/wordChoice}
-\practice{exercises/hintsAndFollowUp}
+\part{List of exercises ('practice')}
+\practice{aListOfExercisesFolder/answer}
+\practice{aListOfExercisesFolder/multipleChoice}
+\practice{aListOfExercisesFolder/selectAll}
+\practice{aListOfExercisesFolder/wordChoice}
+\practice{aListOfExercisesFolder/hintsAndFollowUp}
+
 
 \end{document}
