--- a/aListOfExercisesXourse.tex
+++ b/aListOfExercisesXourse.tex
@@ -9,7 +9,7 @@
 \end{abstract}
 \maketitle
 
-\part{First topiC}
+\part{First topic}
 \chapterstyle
 \activity{aFirstFolder/aFirstActivity}
 \activity{aFirstFolder/aGraphicsActivity}
