--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -1,7 +1,7 @@
 \documentclass{ximera}
 \author{Wim Obbels \and Bart Snapp}
 
-% \input{../preamble}
+\input{../preamble}
 %% Note: since ximeraLatex >= 2024-11-07, file xmPreamble.tex is included AUTOMATICALLY if present
 %% explicit use of \input{preamble} is in most cases no longer needed
 
