add xmPrintStyle (pagelayout)

--- a/xmPreamble.tex
+++ b/xmPreamble.tex
@@ -26,7 +26,7 @@
 %%    - if needed, they could be put in xmPrintStyle.sty   
 %%
 % \newcommand{\R}{\mathbb{R}
-
+\providecommand{\xmDebug}[1]{\typeout{XMDBG: #1}}  % used for debugging xmPreamble/xmPrintStyle
 
 % 
 % This is a rather very advanced example of using TeX-functionality
