--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -20,7 +20,7 @@ the source code, you can visit this source at
 \begin{center}
     \url{https://github.com/ximeraProject/ximeraFirstSteps}
 \end{center}
-or by appending \verb|.tex| to the URl of this page online. 
+or by appending \verb|.tex| to the URL of this page online. 
 
 
 \section{A basic use case}
