--- a/aFirstXourse.tex
+++ b/aFirstXourse.tex
@@ -2,7 +2,7 @@
 %    \input{preamble} %% No longer needed with ximeraLatex versions >= 2024-11-07
 
 \author{Wim Obbels \and Bart Snapp}
-\title{A First Ximera Xourse}
+\title{A very First Ximera Xourse}
 
 \begin{document}
 \begin{abstract}
