--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -6,7 +6,7 @@
 
 \begin{document}
 \begin{abstract}
-    Again a simple Ximera activity.
+    A simple Ximera activity.
 \end{abstract}
 \maketitle
 \label{xim:aFirstActivity}
