--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -1,6 +1,6 @@
 \documentclass{ximera}
 
-\title{A basic worksheet}
+\title{A rather basic worksheet}
 \author{Wim Obbels \and Bart Snapp}
 \license{CC: 0}         % replace with an appropriate license, or set it in xmPreamble
 
