removed duplicate line -- will replace with something meaningful

--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -48,7 +48,7 @@ Now students can check their understanding:
     \end{enumerate}
 \end{question}
 
-You can see the source code for this file by appending \verb|.tex| to the end of the URL. 
+% You can see the source code for this file by appending \verb|.tex| to the end of the URL. 
 
 \section{A paradox}
 
