--- a/aFirstFolder/aGraphicsActivity.tex
+++ b/aFirstFolder/aGraphicsActivity.tex
@@ -13,7 +13,7 @@
 
 In the last section, we showed you how to include images using
 \verb|includegraphics|. However,
-\textbf{The preferred method to include graphics is with TikZ.}
+\textbf{the preferred method to include graphics is with TikZ.}
 \begin{image}
   \begin{tikzpicture}
     \begin{axis}[
