--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -25,7 +25,7 @@ or by appending \verb|.tex| to the URL of this page online.
 
 
 \section{A basic use case}
-We use\verb|\begin{definition}| for definitions and \verb|\begin{question}| for
+We use \verb|\begin{definition}| for definitions and \verb|\begin{question}| for
 questions. Since Ximera provides immediate feedback, we suggest following
 definitions like this one by a quick question. Here's an example:
 
@@ -39,13 +39,20 @@ definitions like this one by a quick question. Here's an example:
     \]
 \end{definition}
 Now students can check their understanding:
+
 \begin{question}
     Evaluate the following:
     \begin{enumerate}
         \item $|2-5| = \answer{3}$
         \item $|5-2| = \answer{3}$
-        \item $|5-\sqrt{2}| = \answer{3.58578643763}$
         \item $|5-\sqrt{2}| = \answer{5-\sqrt{2}}$
+        \item $|5-\sqrt{2}| = \answer{3.58578643763}$
+    \end{enumerate}
+    If $x > 3$ then:
+    \begin{enumerate}
+        \item $|x - 3| = \answer{x - 3}$
+        \item $|3 - x| = \answer{x - 3}$
+        \item $|\sin(x) - 3| = \answer{3 - \sin(x)}$
     \end{enumerate}
 \end{question}
 
