Some very minor grammatic and wording fixes for clarity.

--- a/aFirstFolder/aFirstActivity.tex
+++ b/aFirstFolder/aFirstActivity.tex
@@ -112,7 +112,7 @@ Maybe you want a problem with one or more parts,
             \choice[correct]{It turns LaTeX into online materials}
             \choice[correct]{It boosts student engagement}
             \choice{It makes coffee and hugs you}
-            \choice[correct]{Its open-source and free}
+            \choice[correct]{It's open-source and free}
         \end{selectAll}
     \end{exercise}
 \end{exercise}
