--- a/aFirstFolder/aGraphicsActivity.tex
+++ b/aFirstFolder/aGraphicsActivity.tex
@@ -57,9 +57,8 @@ We can create the image above with the following code:
 
 \section{Videos}
 
-We can embed YouTube Videos with
-
-\verb|\youtube{FvgF95i0_lw}| which would embed the video into the page, like
+We can embed YouTube Videos with the \verb|\youtube| command, for example,
+\verb|\youtube{FvgF95i0_lw}| would embed the video into the page, like
 this:
 \begin{center}
   \youtube{FvgF95i0_lw}
